Fix shootingstar overflow

--- a/src/app/components/StorySection/StorySection.css
+++ b/src/app/components/StorySection/StorySection.css
@@ -1,5 +1,6 @@
 .stars-container {
   position: absolute;
+  overflow: hidden;
 }
 
 @keyframes animateBg {
