--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
 }
 
 body {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 @layer utilities {
